feat: добавлен линтер и список товаров, обновлен дизайн

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,19 @@
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
         "paths": {
+            "@components/*": ["src/components/*"],
+            "@components": ["src/components"],
+            "@assets": ["src/assets"],
             "@images": ["src/assets/images"],
+            "@pages/*": ["src/pages/*"],
+            "@pages": ["src/pages"],
+            "@slices/*": ["src/services/slices/*"],
+            "@slices": ["src/services/slices"],
             "@store": ["src/services/store"],
+            "@ui/*": ["src/components/ui/*"],
             "@ui": ["src/components/ui"],
+            "@utils/*": ["src/utils/*"],
+            "@utils": ["src/utils"],
         }
     },
     "outDir": "./dist/",
