--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
         "paths": {
+            "@assets": ["src/assets"],
             "@components/*": ["src/components/*"],
             "@components": ["src/components"],
-            "@assets": ["src/assets"],
+            "@hooks/*": ["src/hooks/*"],
+            "@hooks": ["src/hooks"],
             "@images": ["src/assets/images"],
             "@pages/*": ["src/pages/*"],
             "@pages": ["src/pages"],
