chore: конфиг. файлы отформатированы Prettier и внесены правки

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,40 +1,43 @@
 {
-    "compilerOptions": {
-        "target": "ES5",
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "lib": [
-            "DOM",
-            "ESNext"
-        ],
-        "jsx": "react-jsx",
-        "isolatedModules": true,
-        "esModuleInterop": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true,
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
-        "baseUrl": ".",
-        "paths": {
-            "@assets": ["src/assets"],
-            "@components/*": ["src/components/*"],
-            "@components": ["src/components"],
-            "@hooks/*": ["src/hooks/*"],
-            "@hooks": ["src/hooks"],
-            "@images": ["src/assets/images"],
-            "@pages/*": ["src/pages/*"],
-            "@pages": ["src/pages"],
-            "@slices/*": ["src/services/slices/*"],
-            "@slices": ["src/services/slices"],
-            "@store": ["src/services/store"],
-            "@ui/*": ["src/components/ui/*"],
-            "@ui": ["src/components/ui"],
-            "@utils/*": ["src/utils/*"],
-            "@utils": ["src/utils"],
-        }
-    },
-    "outDir": "./dist/",
-    "include": ["src/**/*"]
+  "compilerOptions": {
+    "target": "ES5",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "lib": ["DOM", "ESNext"],
+    "jsx": "react-jsx",
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@assets": ["src/assets"],
+      "@components/*": ["src/components/*"],
+      "@components": ["src/components"],
+      "@hooks/*": ["src/hooks/*"],
+      "@hooks": ["src/hooks"],
+      "@http/*": ["src/http/*"],
+      "@http": ["src/http"],
+      "@images": ["src/assets/images"],
+      "@models/*": ["src/models/*"],
+      "@models": ["src/models"],
+      "@pages/*": ["src/pages/*"],
+      "@pages": ["src/pages"],
+      "@services/*": ["src/services/*"],
+      "@services": ["src/services"],
+      "@slices/*": ["src/services/slices/*"],
+      "@slices": ["src/services/slices"],
+      "@store": ["src/services/store"],
+      "@ui/*": ["src/components/ui/*"],
+      "@ui": ["src/components/ui"],
+      "@utils/*": ["src/utils/*"],
+      "@utils": ["src/utils"]
+    }
+  },
+  "outDir": "./dist/",
+  "include": ["src/**/*"]
 }
