--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "react": "^19.1.0",
+    "react-dadata": "^2.28.0-beta.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
